Refactor postCartItems controller, cartItem changed to array of objects
