# src/config/swagger.yaml
@@ -188,33 +188,40 @@ paths:
 
 
   /api/postCart:
-    post:
-      # security:
-      #   - bearerAuth: []
-      tags:
-        - postCart
-      summary: Save item to cart
-      requestBody:
-        required: true
-        content:
-          application/json:
-            schema:
-              type: object
-              properties:
-                email:
-                  type: string
-                  description: The ID of the user
-                  example: "123456"
-                id:
-                  type: []
-                  description: The ID of the item to be added to cart
-                  example: "789012"
-                size:
-                  type: []
-                  description: The size of the item to be added to cart
-                  example: "us10"  
-      responses:
-        "200":
-          description: item added successfully
-        "401":
-          description: Unauthorized - Title not found or item already exists 
+   post:
+    tags:
+      - postCart
+    summary: Save item to cart
+    requestBody:
+      required: true
+      content:
+        application/json:
+          schema:
+            type: object
+            properties:
+              email:
+                type: string
+                description: The ID of the user
+                example: "123456"
+              cartItems:
+                type: array
+                items:
+                  type: object
+                  properties:
+                    itemId:
+                      type: string
+                      description: The ID of the item to be added to cart
+                      example: "789012"
+                    size:
+                      type: string
+                      description: The size of the item to be added to cart
+                      example: "us10"
+                    quantity:
+                      type: number
+                      description: The quantity of the item to be added to cart
+                      example: 1
+    responses:
+      "200":
+        description: Item added successfully
+      "401":
+        description: Unauthorized - Title not found or item already exists
